# quadpackhpp

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  gk15.hpp  gk15i.hpp  gk15w.hpp  gk21.hpp  gk31.hpp  gk41.hpp  gk51.hpp  gk61.hpp  qag.hpp  qage.hpp  qagi.hpp  qagp.hpp  qags.hpp  qawc.hpp  qawce.hpp  qawf.hpp  qawfe.hpp  qawo.hpp  qaws.hpp  qawse.hpp  qc25c.hpp  qc25o.hpp  qc25s.hpp  qcheb.hpp  qext.hpp  qfour.hpp  qmomo.hpp  qng.hpp  qsort.hpp  quadpack.hpp  qwgt.hpp
include/: gk15w.hpp  gk31.hpp  gk41.hpp  gk51.hpp  qagi.hpp  qags.hpp  qawc.hpp  qawce.hpp  qawf.hpp  qawfe.hpp  qc25c.hpp  qfour.hpp  qmomo.hpp  qng.hpp  qsort.hpp  quadpack.hpp
test/: test.cpp
